@@ -1,6 +1,6 @@
-# $NetBSD: Makefile,v 1.61 2004/11/30 02:50:52 uebayasi Exp $
+# $NetBSD: Makefile,v 1.62 2005/03/04 15:32:35 uebayasi Exp $
 
-DISTNAME=	mew-4.1
+DISTNAME=	mew-4.2
 CATEGORIES=	mail
 MASTER_SITES=	ftp://ftp.mew.org/pub/Mew/release/
 
@@ -13,6 +13,7 @@ CONFLICTS=+	mew-xemacs-*
 INFO_FILES=	mew.info
 
 USE_BUILDLINK3=	yes
+HAS_CONFIGURE=	yes
 
 EMACS_VERSIONS_ACCEPTED=	emacs21 emacs21nox emacs20 xemacs214 xemacs215
 
